syntax = "proto3";
package v2;

import "api/v2/vulnerability.proto";

option go_package = "./api/v2;v2";
option java_package = "io.stackrox.proto.api.v2";

message ScanComponent {
  string name = 1;
  string version = 2;
  oneof set_top_cvss {
    float top_cvss = 3;
  }
  float risk_score = 4;
  string architecture = 5;
  repeated EmbeddedVulnerability vulns = 6;
  // TODO (ROX-30352): Review the use of executable and if it applies to virtual machines
}
